--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Karolina Maria</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lekton:400,400i,700|Molengo" rel="stylesheet">
 
@@ -14,7 +15,7 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <h1>karolina sledz</h1>
+      <h1>karoline sledz</h1>
       <p>online marketer, musician, dabbler</p>
       <a href="mailto:sledzkm@gmail.com" class="button">hire me</a>
     </header>
@@ -30,8 +31,8 @@
       <section class="jjc">
         <p><b>Illinois State University</b></p>
         <p>Normal, IL</p>
-        <p>General Studies</p>
-        <p>August 2009 - May 2010</p>
+        <p>B.S. Music Business</p>
+        <p>August 20010 - May 2013</p>
         <p><i>magna cum laude</i></p>
       </section>
       <section class="jjc">
@@ -52,30 +53,31 @@
         <h3>cleverbridge, Chicago, IL
         <br>Online Marketing Coordinator. | November 2015 - present</h3>
         <ul>
-          <li>Build automated email campaigns in Salesforce Marketing Cloud and WhatCounts platforms</li>
+          <li>Wireframe, design and manipulate responsive email templates</li><li>Build automated email campaigns in Salesforce Marketing Cloud and WhatCounts platforms</li>
           <li>Collaborate with developers to scope campaign requirements</li>
           <li>Create use cases and QA campaign functionality before and after launch</li>
-          <li>Wireframe, design and manipulate responsive email templates</li>
           <li>Monitor email deliverability, IP and domain reputation, remove blacklists and mend ISP issues</li>
           <li>Write email body, subject line and CTA copy</li>
           <li>Run and analyze optimization tests on subject lines, preheaders, body copy, CTAs, sending time, design aspects, etc.</li>
           <li>Strategically segment subscriber lists according to type of email campaign/send</li>
           <li>Pull and analyze email performance and revenue reports</li>
           <li>Compose client newsletter posts on the topic of overall digital marketing strategies</li>
-          <li>Create quarterly business review for managed clients with detailed analysis and insights for future optimizations</li>
+          <li>Create quarterly business reviews for managed clients with detailed analysis and insights for future optimizations</li>
           <li>Act as point of contact for clients' platform issues</li>
+          <li>Redesigned Marketing Services Team Site</li>
         </ul>
       </section><br>
       <section>
-        <h3>Digital Professional Institute, Chicago, IL <br> Program Coordinator | February 2015 - November 2015</h3>
+        <h3>Digital Professional Institute, Chicago, IL <br> Course Coordinator | February 2015 - November 2015</h3>
         <ul>
-          <li>Defined responsibilities, processes and standards for the Program Coordinator role from the ground up</li>
-          <li>Managed Academic Channel: high school computer science curriculum project (consisting of HTML, CSS, Javascript)</li>
+          <li>Defined responsibilities, processes and standards for the Course Coordinator role from the ground up</li>
+          <li>Managed Academic Channel: high school computer science curriculum project (consisting of HTML, CSS, 'How the Web Works')</li>
+          <li>Created content for high school HTML/CSS computer science curriculum</li>
           <li>Created content for DPI website and blog</li>
           <li>Supported launch of Adwords campaign and analyzed data for course development and audience research</li>
           <li>Managed Learning Management System (LMS)</li>
           <li>Performed quality checks and administered changes to all course content before publishing to LMS</li>
-          <li>Ran logistics and coordinated day to day operations of Ground Channel courses</li>
+          <li>Ran logistics and coordinated day-to-day operations of Ground Channel courses</li>
           <li>Ideated and implemented new opportunities in product development for both Ground and Academic channels</li>
         </ul>
       </section><br>
@@ -87,8 +89,8 @@
           <li>Assisted with donor events such as luncheons, cast parties, Fantasy of the Opera and Opera Ball</li>
           <li>Composed all acknowledgement letters on behalf of Lyric Opera President</li>
           <li>Supervised Opera Shop volunteers</li>
-          <li>Administer changes within CRM to ensure data is current</li>
-          <li>Collaborated with remaining teams of the development department to process reservations for various events (eg. Board trips, Opening Night Gala, etc.</li>
+          <li>Administered changes within CRM to ensure data is current</li>
+          <li>Collaborated with remaining teams of the fundraising department to process reservations for various events (eg. Board trips, Opening Night Gala, etc.)</li>
         </ul>
       </section>
     </div>
